manifest/postgresql/templates/network-policies.yaml
---
# NetworkPolicy for PostgreSQL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-netpol
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
  
  ingress:
    # Allow only from backend-rust and migration job
    - from:
      # Allow Keycloak running in the 'default' namespace
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
        podSelector:
          matchLabels:
            app: keycloak
      # Allow backend-rust (in 'expenses-monitor' namespace) to reach Postgres
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: expenses-monitor
        podSelector:
          matchLabels:
            app: backend-rust
      # Allow DB migration job from 'expenses-monitor' namespace
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: expenses-monitor
        podSelector:
          matchLabels:
            job-name: backend-rust-db-migration
      ports:
        - protocol: TCP
          port: 5432
